[metadata]
name = linux-kernel-compat-helper
version = 1.0
description = A helper to get exact versions based on commit changes to maintain compatibility across kernel versions.
long_description = file: README.rst
url = 
author = Chaitanya Tata
author_email = Chaitanya.tk17@gmail.com
license = GPL-2.0

[options]
install_requires =
	PyGithub
include_package_data = True
packages = find:

[options.packages.find]
exclude = tests

[options.extras_require]
dev = flake8; coverage; mypy; black>=20.8b0; types-pyyaml; types-requests; types-jinja2
docs = sphinx; sphinx_rtd_theme

[options.entry_points]
console_scripts=
	lk-get-tag=lk_compat_helper.commit_to_tag:main
